# Kratos

applications/: CMakeLists.txt
applications/AnalyticSensitivityApplication/: AnalyticSensitivityApplication.py  CMakeLists.txt  analytic_sensitivity_application.cpp  analytic_sensitivity_application.h
applications/AnalyticSensitivityApplication/custom_elements/: small_displacement_ersatz_element.cpp  small_displacement_ersatz_element.hpp
applications/AnalyticSensitivityApplication/custom_python/: analytic_sensitivity_python_application.cpp
applications/AnalyticSensitivityApplication/custom_strategies/: structure_adjoint_sensitivity_strategy.h
applications/AnalyticSensitivityApplication/custom_strategies/custom_schemes/: residualbased_incrementalupdate_static_ersatz_scheme.h
applications/AnalyticSensitivityApplication/python_script/: CMakeCache.txt  Ersatz_analysis.py  LSM_coupling.py  ProjectParameters.json  Sf.txt  Sg.txt  StructuralMaterial.json  cantilever.mdpa  cantilever2.mdpa  run_configure.sh  structural_mechanics_static_Ersatz_solver.py  test.ipynb
applications/StructuralMechanicsApplication/tests/truss_test/: MainKratos.py
applications/TopologyOptimizationApplication/: CMakeLists.txt
